cambios de fondos y agrado de ids

--- a/index.html
+++ b/index.html
@@ -18,99 +18,138 @@
                 Esta es una lista de mis artistas favoritos, una breve descripcion de ellos y sus mejores canciones para mi
             </p>
         </header>
+
+        <nav class="navbar">
+            <ul>
+                <li><a href="#lit" rel="noopener noreferrer">Lit Killah</a>
+                </li>
+                <li>
+                    <a href="#trueno"  rel="noopener noreferrer">Trueno</a>
+                </li>
+                <li>
+                    <a href="#leon"  rel="noopener noreferrer">Leon Larregui</a>
+                </li>
+                <li>
+                    <a href="#rene"  rel="noopener noreferrer">Rene Perez</a>
+                </li>
+                <li>
+                    <a href="#Siddhartha"  rel="noopener noreferrer">Siddhartha</a>
+                </li>
+                <li>
+                    <a href="#duki"  rel="noopener noreferrer">Duki
+                    </a>
+                </li>
+                <li>
+                    <a href="#mon"  rel="noopener noreferrer">Mon Laferte</a>
+                </li>
+                <li>
+                    <a href="#tiago"  rel="noopener noreferrer">Tiago PZK</a>
+                </li>
+                <li><a href="#cancerbero"  rel="noopener noreferrer">Cancerbero</a></li>
+            </ul>
+        </nav>
+
         <main class="main-content">
             <div class="card">
-                <article class="lit">
+                <article class="lit" id="lit">
                     <div class="front">
                         <img src="./assets/images/lit.jpg" alt=" Artista Lit Killah">
                     </div>
                     <div class="back">
                         <h2>Lit Killah</h2>
                         <p class="hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, non perspiciatis architecto rerum inventore illum porro aliquam modi ex, suscipit asperiores blanditiis quo molestias repellendus molestiae quasi. Iure, neque reprehenderit?</p>
+                        <button>Ver mas</button>
                     </div>
                 </article>
             </div>
             <div class="card">
-                <article class="trueno">
+                <article class="trueno" id="trueno">
                     <div class="front">
                         <img src="./assets/images/trueno.jpg" alt="Artista Trueno">
                     </div>
                     <div class="back">
                         <h2>Trueno</h2>
                         <p class="hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, non perspiciatis architecto rerum inventore illum porro aliquam modi ex, suscipit asperiores blanditiis quo molestias repellendus molestiae quasi. Iure, neque reprehenderit?</p>
+                        <button>Ver mas</button>
                     </div>
                 </article>
             </div>
 
             <div class="card">
-                <article class="leon">
+                <article class="leon" id="leon">
                     <div class="front">
                     <img src="./assets/images/Leon.jpg" alt="Artista Leon Larregui">
                     </div>
                 <div class="back">
                     <h2>Leon Larregui</h2>
                     <p class="hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, non perspiciatis architecto rerum inventore illum porro aliquam modi ex, suscipit asperiores blanditiis quo molestias repellendus molestiae quasi. Iure, neque reprehenderit?</p>
+                    <button>Ver mas</button>
                 </div>
                 </article>
             </div>
 
             <div class="card">
-                <article class="rene">
+                <article class="rene" id="rene">
                     <div class="front">
                         <img src="./assets/images/calle13.jpg" alt="artista Rene Perez">
                     </div>
                     <div class="back">
                         <h2>Rene perez</h2>
                         <p class="hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, non perspiciatis architecto rerum inventore illum porro aliquam modi ex, suscipit asperiores blanditiis quo molestias repellendus molestiae quasi. Iure, neque reprehenderit?</p>
+                        <button>Ver mas</button>
                     </div>
                 </article>
             </div>
             <div class="card">
-                <article class="siddhartha">
+                <article class="siddhartha" id="siddhartha">
                     <div class="front">
                         <img src="./assets/images/siddhartha.jpg" alt="Artista siddhartha">
                     </div>
                     <div class="back">
                         <h2>Siddhartha</h2>
                         <p class="hidden">Lorem ipsum dolor   sit amet consectetur adipisicing elit. Cumque, non perspiciatis architecto rerum inventore illum porro aliquam modi ex, suscipit asperiores blanditiis quo molestias repellendus molestiae quasi. Iure, neque reprehenderit?</p>
+                        <button>Ver mas</button>
                     </div>
                 </article>
             </div>
             <div class="card">
-                <article class="duki">
+                <article class="duki" id="duki">
                     <div class="front">
                         <img src="./assets/images/duki.jpg" alt="Artista Duki">
                     </div>
                     <div class="back">
                         <h2>Duki</h2>
                         <p class="hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, non perspiciatis architecto rerum inventore illum porro aliquam modi ex, suscipit asperiores blanditiis quo molestias repellendus molestiae quasi. Iure, neque reprehenderit?</p>
+                        <button>Ver mas</button>
                     </div>
                 </article>
             </div>
             <div class="card">
-                <article class="mon">
+                <article class="mon" id="mon">
                     <div class="front">
                         <img src="./assets/images/MonLaferte.jpg" alt="Artista Mon Laferte">
                     </div>
                     <div class="back">
                         <h2>Mon Laferte</h2>
                         <p class="hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, non perspiciatis architecto rerum inventore illum porro aliquam modi ex, suscipit asperiores blanditiis quo molestias repellendus molestiae quasi. Iure, neque reprehenderit?</p>
+                        <button>Ver mas</button>
                     </div>
                 </article>
             </div>
             <div class="card">
-                <article class="tiago">
+                <article class="tiago" id="tiago">
                     <div class="front">
                         <img src="./assets/images/tiago.jpg" alt="Artista Tiago PZK">
                     </div>
                     <div class="back">
                         <h2>Tiago PZK</h2>
                         <p class="hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, non perspiciatis architecto rerum inventore illum porro aliquam modi ex, suscipit asperiores blanditiis quo molestias repellendus molestiae quasi. Iure, neque reprehenderit?</p>
+                        <button>Ver mas</button>
                     </div>
                 </article>
             </div>
             <div class="card">
-                <article class="cancerbero">
+                <article class="cancerbero" id="cancerbero">
                     <div class="front">
                         <img src="./assets/images/cancerbero.jpg" alt="Artista Cancerbero">
                        
@@ -118,11 +157,21 @@
                     <div class="back">
                         <h2>Cancerbero</h2>
                         <p class="hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, non perspiciatis architecto rerum inventore illum porro aliquam modi ex, suscipit asperiores blanditiis quo molestias repellendus molestiae quasi. Iure, neque reprehenderit?</p>
+                        <button>Ver mas</button>
                     </div>
                 </article>
             </div>
 
         </main>
+        
+        <footer>
+            <ul> 
+                <li><a href=""> Contame de vos</a></li>
+                <li><a href="">Sobre mi</a></li>
+                <li><a href="https://www.instagram.com/chinchu21/" target="_blank" rel="noopener noreferrer">Mi insta</a></li>
+                <li>by Franco Ojeda</li>
+            </ul>
+        </footer>
 
     </div>
 
