se agragan medias queris

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </main>
         
         <footer>
-            <ul> 
+            <ul class="footer"> 
                 <li><a href=""> Contame de vos</a></li>
                 <li><a href="">Sobre mi</a></li>
                 <li><a href="https://www.instagram.com/chinchu21/" target="_blank" rel="noopener noreferrer">Mi insta</a></li>
