nueva pagina, cambios de fuente

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Top de Artistas</title>
     <link rel="stylesheet" href="./CSS/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -58,7 +59,7 @@
                     <div class="back">
                         <h2>Lit Killah</h2>
                         <p class="hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, non perspiciatis architecto rerum inventore illum porro aliquam modi ex, suscipit asperiores blanditiis quo molestias repellendus molestiae quasi. Iure, neque reprehenderit?</p>
-                        <button>Ver mas</button>
+                        <button><a class="button" href="./html/litkillah.html" target="_blank"> Ver mas </a></button>
                     </div>
                 </article>
             </div>
