nueva pagina de trueno, add de medias queries

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="back">
                         <h2>Trueno</h2>
                         <p class="hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, non perspiciatis architecto rerum inventore illum porro aliquam modi ex, suscipit asperiores blanditiis quo molestias repellendus molestiae quasi. Iure, neque reprehenderit?</p>
-                        <button>Ver mas</button>
+                        <button><a href="./html/trueno.html" class="button">Ver mas</a></button>
                     </div>
                 </article>
             </div>
